--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <a target="blank" href="https://www.instagram.com/josephhhz">Instagram</a>
     </p>
 
-    <div class="wrap">
+    <!-- <div class="wrap">
       <div id="ball"></div>
-    </div>
+    </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="script/landing.js"></script>
+    <!-- <script src="script/landing.js"></script> -->
   </body>
 </html>
