--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-148807463-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "UA-148807463-1");
-    </script>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -30,7 +15,7 @@
       content="joseph, zhang, josephz, jospehz.me, jxsephz, art , design, carnegie mellon, design, cmu, cmu, design, ux design, art, graphic design, interaction design"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="images/herb.png" />
+    <link rel="icon" href="circle.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
@@ -53,10 +38,17 @@
       interfaces with
       <a target="blank" href="https://www.brain.ai">Brain Technologies</a>
       (F’20). <br /><br />
-      Contact — [josephzhang@cmu.edu]<br /><br />
-      —<br />
-      <a target="blank" href="https://linkedin.com/josephzme">CV</a><br />
-      <a target="blank" href="https://www.instagram.com/josephhhz">Instagram</a>
+
+      <br />Contact me at <br />
+      josephzhang@cmu.edu<br />
+      <br />—<br />
+      <a target="blank" href="resume-zhang.pdf">CV</a><br />
+      <a target="blank" href="https://www.instagram.com/josephhhz">Instagram</a
+      ><br />
+      <a target="blank" href="https://www.linkedin.com/in/josephzme/"
+        >LinkedIn</a
+      >
+      <br />
     </p>
 
     <!-- <div class="wrap">
