--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
       Joseph is an interface designer system-level interaction patterns and
       multimodal experiences. Currently, he is an undergraduate at the Carnegie
       Mellon
-      <a href="">School of Design</a> and
-      <a href="">Human-Computer Interaction Institute.</a> He believes in
-      developing a more humane way for people to engage with tech and
-      screen-based interfaces. <br /><br />Previously, he was an Interaction
+      <a target="blank" href="https://design.cmu.edu/">School of Design</a> and
+      <a target="blank" href="https://www.hcii.cmu.edu/"
+        >Human-Computer Interaction Institute.</a
+      >
+      He believes in developing a more humane way for people to engage with tech
+      and screen-based interfaces. <br /><br />Previously, he was an Interaction
       Design Intern at
-      <a target="blank" href="https://www.apple.com/siri/">Apple</a> (S’20)
+      <a target="blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
       building conversational voice patterns and a UX Design Intern at
       <a target="blank" href="https://www.elevationchurch.org"
         >Elevation Church</a
       >
-      (S'19). For the next few months, he will be designing intent-based
-      interfaces with
+      [S'19]. Currently, he is designing intent-based interfaces with
       <a target="blank" href="https://www.brain.ai">Brain Technologies</a>
-      (F’20). <br /><br />
+      [F’20]. <br /><br />
 
-      <br />Contact me at <br />
-      josephzhang@cmu.edu<br />
+      <br />Contact: <br />
+      [josephzhang@cmu.edu]<br />
       <br />—<br />
       <a target="blank" href="resume-zhang.pdf">CV</a><br />
       <a target="blank" href="https://www.instagram.com/josephhhz">Instagram</a
