ball movement update

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   <body onload="followMouse();">
     <p>
-      Joseph is an interface designer system-level interaction patterns and
-      multimodal experiences. Currently, he is an undergraduate at the Carnegie
-      Mellon
+      Joseph is an interface designer exploring system level interaction
+      patterns and multimodal experiences. Currently, he is an undergraduate at
+      the Carnegie Mellon
       <a target="blank" href="https://design.cmu.edu/">School of Design</a> and
       <a target="blank" href="https://www.hcii.cmu.edu/"
         >Human-Computer Interaction Institute.</a
@@ -52,10 +52,10 @@
       <br />
     </p>
 
-    <!-- <div class="wrap">
+    <div class="wrap">
       <div id="ball"></div>
-    </div> -->
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script src="script/landing.js"></script> -->
+    <script src="script/landing.js"></script>
   </body>
 </html>
