--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Joseph Zhang" />
     <meta
       name="description"
-      content="Joseph is an interaction designer exploring the future of multimodal user interfaces."
+      content="Joseph is an interaction designer exploring various forms of of multimodal interaction."
     />
     <meta
       name="keywords"
-      content="joseph, zhang, josephz, jospehz.me, jxsephz, art , design, carnegie mellon, design, cmu, cmu, design, ux design, art, graphic design, interaction design"
+      content="joseph, zhang, josephz, jospehz.me, jxsephz, art , design, carnegie mellon, design, cmu, cmu, design, ux design, art, graphic design, interaction design, apple"
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="circle.png" />
