--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Joseph Zhang" />
     <meta
       name="description"
-      content="Joseph is an interaction designer exploring various forms of of multimodal interaction."
+      content="Joseph is a designer exploring various forms of of multimodal interaction."
     />
     <meta
       name="keywords"
