--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
       Joseph is an interface designer exploring system level interaction
       patterns and multimodal experiences. Currently, he is an undergraduate at
       the Carnegie Mellon
-      <a target="blank" href="https://design.cmu.edu/">School of Design</a> and
-      <a target="blank" href="https://www.hcii.cmu.edu/"
+      <a target="_blank" href="https://design.cmu.edu/">School of Design</a> and
+      <a target="_blank" href="https://www.hcii.cmu.edu/"
         >Human-Computer Interaction Institute.</a
       >
       He believes in developing a more humane way for people to engage with tech
       and screen-based interfaces. <br /><br />Previously, he was an Interaction
       Design Intern at
-      <a target="blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
+      <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
       building conversational voice patterns and a UX Design Intern at
-      <a target="blank" href="https://www.elevationchurch.org"
+      <a target="_blank" href="https://www.elevationchurch.org"
         >Elevation Church</a
       >
       [S'19]. Currently, he is designing intent-based interfaces with
-      <a target="blank" href="https://www.brain.ai">Brain Technologies</a>
+      <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
       [F’20]. <br /><br />
 
       <br />Contact: <br />
       [josephzhang@cmu.edu]<br />
       <br />—<br />
-      <a target="blank" href="resume-zhang.pdf">CV</a><br />
-      <a target="blank" href="https://www.instagram.com/josephhhz">Instagram</a
+      <a target="_blank" href="resume-zhang.pdf">CV</a><br />
+      <a target="_blank" href="https://www.instagram.com/josephhhz">Instagram</a
       ><br />
-      <a target="blank" href="https://www.linkedin.com/in/josephzme/"
+      <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
         >LinkedIn</a
       >
       <br />
