--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
       <a target="_blank" href="https://www.elevationchurch.org"
         >Elevation Church</a
       >
-      [S'19]. Currently, he is designing intent-based interfaces with
+      [S'19]. As of now, he is taking Zoom classes from his bedroom and
+      designing intent-based interfaces with
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
       [F’20]. <br /><br />
 
-      <br />Contact: <br />
+      <br />Feel free to reach out: <br />
       [josephzhang@cmu.edu]<br />
       <br />—<br />
       <a target="_blank" href="resume-zhang.pdf">CV</a><br />
