--- a/index.html
+++ b/index.html
@@ -29,28 +29,26 @@
         >Human-Computer Interaction Institute.</a
       >
       He believes in developing a more humane way for people to engage with tech
-      and screen-based interfaces. <br /><br />Previously, he was an Interaction
-      Design Intern at
+      and screen-based interfaces. <br /><br />Most recently, he was an
+      Interaction Design Intern at
       <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-      building conversational voice patterns and a UX Design Intern at
-      <a target="_blank" href="https://www.elevationchurch.org"
-        >Elevation Church</a
-      >
-      [S'19]. As of now, he is taking Zoom classes from his bedroom and
-      designing intent-based interfaces with
+      building conversational voice patterns. He is leading
+      <a href="https://www.tedxcmu.org/" target="_blank">TEDxCMU</a>'s Design
+      Team, working as an Interface Design Intern at
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20]. <br /><br />
+      [F’20], and attempting to make acceptable Mapo tofu.
+      <br /><br />
 
       <br />Feel free to reach out: <br />
       [josephzhang@cmu.edu]<br />
       <br />—<br />
       <a target="_blank" href="resume-zhang.pdf">CV</a><br />
-      <a target="_blank" href="https://www.instagram.com/josephhhz">Instagram</a
-      ><br />
       <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
         >LinkedIn</a
+      ><br />
+      <a target="_blank" href="https://www.instagram.com/josephhhz"
+        >Instagram</a
       >
-      <br />
     </p>
 
     <div class="wrap">
