--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body onload="followMouse();">
     <p>
       Joseph is an interface designer exploring system level interaction
-      patterns and multimodal experiences. Currently, he is an undergraduate at
-      the Carnegie Mellon
+      patterns and multimodal experiences. He is an undergraduate at the
+      Carnegie Mellon
       <a target="_blank" href="https://design.cmu.edu/">School of Design</a> and
       <a target="_blank" href="https://www.hcii.cmu.edu/"
         >Human-Computer Interaction Institute.</a
@@ -32,11 +32,11 @@
       and screen-based interfaces. <br /><br />Most recently, he was an
       Interaction Design Intern at
       <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-      building conversational voice patterns. He is leading
-      <a href="https://www.tedxcmu.org/" target="_blank">TEDxCMU</a>'s Design
-      Team, working as an Interface Design Intern at
+      building conversational voice patterns. Currently, he is designing
+      intent-based interfaces with
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20], and attempting to make acceptable Mapo tofu.
+      [F’20], taking Zoom classes from his bedroom, and learning how to make
+      random recipes he finds online.
       <br /><br />
 
       <br />Feel free to reach out: <br />
