final final bio tweak

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       building conversational voice patterns. Currently, he is designing
       intent-based interfaces with
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20], taking Zoom classes from his bedroom, and learning how to make
-      random recipes he finds online.
+      [F’20], taking Zoom classes from his bedroom, and honing his cooking
+      skills through recipes he finds online.
       <br /><br />
 
       <br />Feel free to reach out: <br />
