--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
       and screen-based interfaces. <br /><br />Most recently, he was an
       Interaction Design Intern at
       <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-      building conversational voice patterns. Currently, he is designing
-      intent-based interfaces with
+      building conversational voice patterns and is now designing intent-based
+      interfaces with
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20], taking Zoom classes from his bedroom, and honing his cooking
-      skills through recipes he finds online.
-      <br /><br />
+      [F’20]. In his free time, he follows vegetable roasting recipes,
+      needlessly checks LinkedIn, and reads books like
+      <a
+        target="_blank"
+        href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
+        >this</a
+      >. <br /><br />
 
       <br />Feel free to reach out: <br />
       [josephzhang@cmu.edu]<br />
@@ -45,7 +49,8 @@
       <a target="_blank" href="resume-zhang.pdf">CV</a><br />
       <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
         >LinkedIn</a
-      ><br />
+      >
+      <br />
       <a target="_blank" href="https://www.instagram.com/josephhhz"
         >Instagram</a
       >
