--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       building conversational voice patterns and is now designing intent-based
       interfaces with
       <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20]. In his free time, he follows vegetable roasting recipes,
-      needlessly checks LinkedIn, and reads books like
+      [F’20]. In his free time, he cooks amateur Chinese food, needlessly checks
+      LinkedIn, and reads books like
       <a
         target="_blank"
         href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
