view work button

--- a/index.html
+++ b/index.html
@@ -20,41 +20,51 @@
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
   <body onload="followMouse();">
-    <p>
-      Joseph is an interface designer exploring system level interaction
-      patterns and multimodal experiences. He is an undergraduate at the
-      Carnegie Mellon
-      <a target="_blank" href="https://design.cmu.edu/">School of Design</a> and
-      <a target="_blank" href="https://www.hcii.cmu.edu/"
-        >Human-Computer Interaction Institute.</a
-      >
-      He believes in developing a more humane way for people to engage with tech
-      and screen-based interfaces. <br /><br />Most recently, he was an
-      Interaction Design Intern at
-      <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-      building conversational voice patterns and is now designing intent-based
-      interfaces with
-      <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-      [F’20]. In his free time, he cooks amateur Chinese food, needlessly checks
-      LinkedIn, and reads books like
-      <a
-        target="_blank"
-        href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
-        >this</a
-      >. <br /><br />
+    <main>
+      <p>
+        Joseph is an interface designer exploring system level interaction
+        patterns and multimodal experiences. He is an undergraduate at the
+        Carnegie Mellon
+        <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
+        and
+        <a target="_blank" href="https://www.hcii.cmu.edu/"
+          >Human-Computer Interaction Institute.</a
+        >
+        He believes in developing a more humane way for people to engage with
+        tech and screen-based interfaces. <br /><br />Most recently, he was an
+        Interaction Design Intern at
+        <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
+        building conversational voice patterns and is now designing intent-based
+        interfaces with
+        <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
+        [F’20]. In his free time, he cooks amateur Chinese food, needlessly
+        checks LinkedIn, and reads books like
+        <a
+          target="_blank"
+          href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
+          >this</a
+        >. <br /><br />
 
-      <br />Feel free to reach out: <br />
-      [josephzhang@cmu.edu]<br />
-      <br />—<br />
-      <a target="_blank" href="resume-zhang.pdf">CV</a><br />
-      <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
-        >LinkedIn</a
-      >
-      <br />
-      <a target="_blank" href="https://www.instagram.com/josephhhz"
-        >Instagram</a
-      >
-    </p>
+        <br />Feel free to reach out: <br />
+        [josephzhang@cmu.edu]<br />
+        <br />—<br />
+        <a target="_blank" href="resume-zhang.pdf">CV</a><br />
+        <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
+          >LinkedIn</a
+        >
+        <br />
+        <a target="_blank" href="https://www.instagram.com/josephhhz"
+          >Instagram</a
+        >
+      </p>
+    </main>
+    <footer>
+      <p class="footer">
+        <a target="blank" href="https://design-portfolio-ft809uunh.vercel.app/"
+          >View Work</a
+        >
+      </p>
+    </footer>
 
     <div class="wrap">
       <div id="ball"></div>
