--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         >
       </p>
     </main>
+    <!-- link to old site -->
     <footer>
       <p class="footer">
         <a target="blank" href="https://design-portfolio-ft809uunh.vercel.app/"
