--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- link to old site -->
     <footer>
       <p class="footer">
-        <a target="blank" href="https://design-portfolio-ft809uunh.vercel.app/"
+        <a target="_blank" href="https://design-portfolio-ft809uunh.vercel.app/"
           >View Work</a
         >
       </p>
@@ -73,9 +73,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script/landing.js"></script>
-    <script src="script/scroll.js"></script>
+    <!-- <script src="script/scroll.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.4.0/smooth-scrollbar.js"></script>
-    <reference path="myjsfile.d.ts" />
     <script>
       function isMobile() {
         return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
