--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     <!-- <script src="script/scroll.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.4.0/smooth-scrollbar.js"></script>
     <script>
-      function isMobile() {
-        return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
-          navigator.userAgent
-        );
-      }
+      // function isMobile() {
+      //   return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
+      //     navigator.userAgent
+      //   );
+      // }
 
-      if (isMobile()) {
-        var Scrollbar = window.Scrollbar;
-        Scrollbar.init(document.querySelector("#my-scrollbar"));
-      }
+      // if (isMobile()) {
+      var Scrollbar = window.Scrollbar;
+      Scrollbar.init(document.querySelector("#my-scrollbar"));
+      // }
     </script>
   </body>
 </html>
