--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         tech and screen-based interfaces. <br /><br />Most recently, he was an
         Interaction Design Intern at
         <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-        building conversational voice patterns and is now designing intent-based
+        building conversational patterns and is now designing intent-based
         interfaces with
         <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
         [F’20]. In his free time, he cooks amateur Chinese food, needlessly
