--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="joseph, zhang, josephz, jospehz.me, jxsephz, art , design, carnegie mellon, design, cmu, cmu, design, ux design, art, graphic design, interaction design, apple"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="circle.png" />
+    <!-- <link rel="icon" href="circle.png" /> -->
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
