--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
   <body onload="followMouse();">
     <main>
       <p>
-        Joseph is a designer exploring system-level interaction
-        patterns and multimodal experiences. He is an undergraduate at the
-        Carnegie Mellon
+        Joseph is a designer exploring system-level interaction patterns and
+        multimodal experiences. He is an undergraduate at the Carnegie Mellon
         <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
         and
         <a target="_blank" href="https://www.hcii.cmu.edu/"
           >Human-Computer Interaction Institute</a
-        > where he plays with code, visual design, and experimental forms of interaction.
-        <br /><br />Most recently, he was an
-        Interaction Design Intern at
+        >
+        where he plays with code, visual design, and experimental forms of
+        interaction.
+        <br /><br />Most recently, he was an Interaction Design Intern at
         <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
         building conversational patterns and is now designing intent-based
         interfaces with
         <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
         [F’20]. In his free time, he cooks amateur Chinese food, needlessly
-        checks LinkedIn (drastically reduced), and reads books like
+        checks LinkedIn, and reads books like
         <a
           target="_blank"
           href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
           >this</a
         >. <br /><br />
 
-        Contact:  <br/>
+        Let's talk: <br />
         [josephzhang@cmu.edu]<br />
         <br />—<br />
         <a target="_blank" href="resume-zhang.pdf">CV</a><br />
