--- a/index.html
+++ b/index.html
@@ -23,39 +23,38 @@
   <body onload="followMouse();">
     <main>
       <p>
-        Joseph is a designer exploring system-level interaction patterns and
-        multimodal experiences. He is an undergraduate at the Carnegie Mellon
-        <span><a target="_blank" href="https://design.cmu.edu/">School of Design</a></span>
-        and
-        <span><a target="_blank" href="https://www.hcii.cmu.edu/"
-          >Human-Computer Interaction Institute</a
-        >
-        where he plays with code, visual design, and experimental forms of
-        interaction.
-        <br /><br />Most recently, he was an Interaction Design Intern at
-        <span><a target="_blank" href="https://www.apple.com/siri/">Apple</a></span> [S’20]
-        building conversational patterns and is now designing intent-based
-        interfaces with
-        <span><a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
-</span>
-        [F’20]. In his free time, he cooks amateur Chinese food, needlessly
-        checks LinkedIn, and reads books like
-        <span><a
-          target="_blank"
-          href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
-          >this</a
-        >. <br /><br />
-
+        <span class="bio">
+          Joseph is a designer exploring system-level interaction patterns and
+          multimodal experiences. He is an undergraduate at the Carnegie Mellon
+          <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
+          and
+          <a target="_blank" href="https://www.hcii.cmu.edu/"
+            >Human-Computer Interaction Institute</a
+          >
+          where he plays with code, visual design, and experimental forms of
+          interaction.
+          <br /><br />Most recently, he was an Interaction Design Intern at
+          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
+          building conversational patterns and is now designing intent-based
+          interfaces with
+          <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
+          [F’20]. In his free time, he cooks amateur Chinese food, needlessly
+          checks LinkedIn, and reads books like
+          <a
+            target="_blank"
+            href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
+            >this</a
+          >. <br /><br />
+        </span>
         Let's talk: <br />
         josephzhang@cmu.edu<br />
         <br />—<br />
-        <span><a target="_blank" href="resume-zhang.pdf">CV</a>
-</span><br />
-        <span><a target="_blank" href="https://www.linkedin.com/in/josephzme/"
+        <a target="_blank" href="resume-zhang.pdf">CV</a><br />
+        <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
           >LinkedIn</a
         >
         <br />
-        <span><a target="_blank" href="https://www.instagram.com/josephhhz"
+        <a target="_blank" href="https://www.instagram.com/josephhhz"
           >Instagram</a
         >
       </p>
@@ -63,7 +62,7 @@
     <!-- link to old site -->
     <footer>
       <p class="footer">
-        <span><a target="_blank" href="https://design-portfolio-ft809uunh.vercel.app/"
+        <a target="_blank" href="https://design-portfolio-ft809uunh.vercel.app/"
           >View Work</a
         >
       </p>
