--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       content="joseph, zhang, josephz, jospehz.me, jxsephz, art , design, carnegie mellon, design, cmu, cmu, design, ux design, art, graphic design, interaction design, apple"
     />
     <meta name="robots" content="index, follow" />
-    <!-- <link rel="icon" href="circle.png" /> -->
+    <link rel="icon" href="circle.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
   </head>
@@ -77,23 +77,8 @@
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
   ></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.5.0.js"></script> -->
-
   <script src="script/landing.js"></script>
-  <!-- <script src="script/scroll.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.4.0/smooth-scrollbar.js"></script>
   <script>
-    // function isMobile() {
-    //   return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
-    //     navigator.userAgent
-    //   );
-    // }
-
-    // if (isMobile()) {
-    var Scrollbar = window.Scrollbar;
-    Scrollbar.init(document.querySelector("#my-scrollbar"));
-    // }
     jQuery(function ($) {
       $("a").hover(
         function () {
