--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
     <main>
       <p>
         <span class="bio">
-          Joseph is a designer exploring system-level interaction patterns and
-          multimodal experiences. He is an undergraduate at the Carnegie Mellon
+          Joseph is a designer exploring various forms of interaction. He is an
+          undergraduate at the Carnegie Mellon
           <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
           >
-          where he plays with code, visual design, and experimental forms of
-          interaction.
+          where he plays with code, interaction, and communication design.
           <br /><br />Most recently, he was an Interaction Design Intern at
           <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
           building conversational patterns and is now designing intent-based
