--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           where he plays with code, interaction, and communication design.
           <br /><br />Most recently, he was an Interaction Design Intern at
           <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-          building conversational patterns and is now designing intent-based
-          interfaces with
+          building conversational patterns and is now designing new domains with
           <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
           [F’20]. In his free time, he cooks amateur Chinese food, needlessly
           checks LinkedIn, and reads books like
