--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="icon" href="circle.png" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body onload="followMouse();">
     <main>
