--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <br /><br />Most recently, he was an Interaction Design Intern at
           <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
           building conversational patterns and is now designing new domains with
-          <a target="_blank" href="https://www.brain.ai">Brain Technologies</a>
+          <a target="_blank" href="https://www.natural.ai"
+            >Brain Technologies</a
+          >
           [F’20]. In his free time, he cooks amateur Chinese food, needlessly
           checks LinkedIn, and reads books like
           <a
