link name change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a
         target="_blank"
         href="https://www.notion.so/Design-Archives-93be304932f64d3eb2500d6903915ce4"
-        >Design Archives</a
+        >Project Archives</a
       >
       <!-- <a
         target="_blank"
