--- a/index.html
+++ b/index.html
@@ -24,39 +24,19 @@
     <main>
       <p>
         <span class="bio">
-          Joseph is a designer exploring various forms of interaction. He is an
-          undergraduate at the Carnegie Mellon
+          Joseph is a designer. <br /><br />
+          As of now, he is also a student at the Carnegie Mellon
           <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
-          >
-          where he plays with code, interaction, and communication design.
-          <br /><br />Most recently, he was an Interaction Design Intern at
+          >. <br /><br />He used to be an Interaction Design Intern at
           <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-          building conversational patterns and is now designing new domains with
+          working on Siri, which was great! He is now designing interfaces with
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F’20]. In his free time, he cooks amateur Chinese food, needlessly
-          checks LinkedIn, and reads books like
-          <a
-            target="_blank"
-            href="https://www.amazon.com/Ruthless-Elimination-Hurry-Emotionally-Spiritually/dp/0525653090"
-            >this</a
-          >. <br /><br />
-        </span>
-        Let's talk: <br />
-        josephzhang@cmu.edu<br />
-        <br />—<br />
-        <a target="_blank" href="resume-zhang.pdf">CV</a><br />
-        <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
-          >LinkedIn</a
-        >
-        <br />
-        <a target="_blank" href="https://www.instagram.com/josephhhz"
-          >Instagram</a
-        >
+          [F'20].
       </p>
     </main>
 
@@ -71,10 +51,10 @@
         target="_blank"
         href="https://medium.com/swlh/if-conversational-assistants-could-enhance-human-conversation-2cfb048cfc60"
         >Thinkspace</a
-      >
+      ><br/>
       <a target="_blank" href="https://www.josephz.me/reading-trends"
         >Reading Trends</a
-      >
+      ><br/>
       <a target="_blank" href="https://design-portfolio-ft809uunh.vercel.app/"
         >Other</a
       >
