--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
       <p>
         <span class="bio">
           Joseph is a designer. <br /><br />
-          As of now, he is also a student at the Carnegie Mellon
+          He also happens to be a student at the Carnegie Mellon
           <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
-          >. <br /><br />He used to be an Interaction Design Intern at
-          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20]
-          working on Siri, which was great! He is now designing interfaces with
+          >. <br /><br />Previous at
+          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20], he is now designing interfaces with
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F'20].
+          [F'20]. One day, he will start reading books for fun, learn how to play the guitar, and design his own furniture. 
       </p>
     </main>
 
