--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
-          >. <br /><br />Previous at
+          >. <br /><br />Previously at
           <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20], he is now designing interfaces with
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F'20]. One day, he will start reading books for fun, learn how to play the guitar, and design his own furniture. 
+          [F'20]. One day, he will start reading books for fun, lear to play the guitar, and design his own furniture. 
       </p>
     </main>
 
