--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F'20]. One day, he will start reading books for fun, lear to play the guitar, and design his own furniture. 
+          [F'20]. One day, he will start reading books for fun and learn how to design/build his own furniture. 
       </p>
     </main>
 
