--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       <p>
         <span class="bio">
           Joseph is a designer. <br /><br />
-          He also happens to be a student at the Carnegie Mellon
+          He is currently a student at the Carnegie Mellon
           <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
           >. <br /><br />Previously at
-          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20], he is now designing interfaces with
+          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20], he now spends his time designing interfaces with
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F'20]. One day, he will start reading books for fun and learn how to design/build his own furniture. 
+          [F'20]. In an alternative life, he would like to be a furniture designer or maybe a dog trainer.
       </p>
     </main>
 
