--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
     <main>
       <p>
         <span class="bio">
-          Joseph is a designer. <br /><br />
-          He is currently a student at the Carnegie Mellon
+          Joseph is an interaction designer.
+          <!-- He is currently a student at the Carnegie Mellon
           <a target="_blank" href="https://design.cmu.edu/">School of Design</a>
           and
           <a target="_blank" href="https://www.hcii.cmu.edu/"
             >Human-Computer Interaction Institute</a
           >. <br /><br />Previously at
-          <a target="_blank" href="https://www.apple.com/siri/">Apple</a> [S’20], he now spends his time designing interfaces with
+          <a target="_blank" href="https://www.apple.com/siri/">Apple</a>
+          [S’20], he now spends his time designing interfaces with
           <a target="_blank" href="https://www.natural.ai"
             >Brain Technologies</a
           >
-          [F'20]. In an alternative life, he would like to be a furniture designer or maybe a dog trainer.
+          [F'20]. In an alternative life, he would like to be a furniture
+          designer or maybe a dog trainer. -->
+        </span>
       </p>
     </main>
 
@@ -50,12 +53,16 @@
         target="_blank"
         href="https://medium.com/swlh/if-conversational-assistants-could-enhance-human-conversation-2cfb048cfc60"
         >Thinkspace</a
-      ><br/>
+      ><br />
       <a target="_blank" href="https://www.josephz.me/reading-trends"
         >Reading Trends</a
-      ><br/>
+      ><br />
       <a target="_blank" href="https://design-portfolio-ft809uunh.vercel.app/"
         >Other</a
+      >
+      <div>—</div>
+      <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
+        >LinkedIn</a
       >
     </footer>
 
@@ -69,6 +76,7 @@
     crossorigin="anonymous"
   ></script>
   <script src="script/landing.js"></script>
+  <script src="script/description.js"></script>
   <script>
     jQuery(function ($) {
       $("a").hover(
