--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         >Other</a
       >
       <div>—</div>
-      <a target="_blank" href="https://www.linkedin.com/in/josephzme/"
-        >LinkedIn</a
-      >
+      <a target="_blank" href="https://www.linkedin.com/in/josephzme/">CV</a>
     </footer>
 
     <div class="wrap">
