--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@
         >Other</a
       >
       <div>—</div>
-      <a
-        class="cv"
-        target="_blank"
-        href="https://www.linkedin.com/in/josephzme/"
-        >CV</a
-      >
+      <a class="cv" target="_blank" href="/resume-zhang.pdf">CV</a>
     </footer>
 
     <div class="wrap">
