--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <source src="public/thinkspace.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
+      <video class="pixel-push-video" autoplay playsinline loop muted>
+        <source src="public/pixel-push.mp4" type="video/mp4" />
+        Your browser does not support HTML video.
+      </video>
       <video class="reading-trends-video" autoplay playsinline loop muted>
         <source src="public/reading-trends.mp4" type="video/mp4" />
         Your browser does not support HTML video.
@@ -47,17 +51,24 @@
 
     <footer>
       <a
+        class="pixel-push"
+        target="_blank"
+        href="https://www.notion.so/josephhhz/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+        >Pixel Push</a
+      ><br />
+      <a
+        class="reading-trends"
+        target="_blank"
+        href="https://www.notion.so/josephhhz/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+        >Reading Trends</a
+      ><br />
+      <a
         class="thinkspace"
         target="_blank"
         href="https://medium.com/swlh/if-conversational-assistants-could-enhance-human-conversation-2cfb048cfc60"
         >Thinkspace</a
       ><br />
-      <a
-        class="reading-trends"
-        target="_blank"
-        href="https://www.josephz.me/reading-trends"
-        >Reading Trends</a
-      ><br />
+
       <a
         class="other"
         target="_blank"
